add more api integration tests
