# src/main/resources/api/api.yaml
@@ -41,6 +41,7 @@ paths:
           name: conferenceId
           schema:
             type: integer
+            format: int64
           required: true
           description: Numeric ID of the conference
       requestBody:
@@ -61,13 +62,14 @@ paths:
           name: conferenceId
           schema:
             type: integer
+            format: int64
           required: true
           description: Numeric ID of the conference
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/TalkDto"
+              $ref: "#/components/schemas/AddTalkRequestDto"
       responses:
         '200':
           description: Conference updated
@@ -84,6 +86,7 @@ paths:
           name: conferenceId
           schema:
             type: integer
+            format: int64
           required: true
           description: Numeric ID of the conference
       responses:
@@ -124,7 +127,6 @@ components:
           example: "2021-07-21"
         participantsNumber:
           type: integer
-          format: int64
           description: Conference participants number
           example: 20
           maximum: 100
@@ -185,7 +187,6 @@ components:
           example: "2021-07-21"
         participantsNumber:
           type: integer
-          format: int64
           description: Conference participants number
           example: 20
           maximum: 100
@@ -195,6 +196,34 @@ components:
 
 
     TalkDto:
+      type: object
+      required:
+        - id
+        - name
+        - description
+        - author
+        - type
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+          description: Talk name
+          example: What Is Spring?
+        description:
+          type: string
+          description: Talk description
+          example: We'll begin with a brief history of the Spring Framework. From there, we discuss the layers of Spring and what each layer does. As we cover each layer, we'll give an overview of the key projects that comprise the layer. Finally, we'll show you how to take your Spring app and run it natively.
+        author:
+          type: string
+          description: Talk author name
+          example: Glenn Renfro
+        type:
+          type: string
+          $ref: "#/components/schemas/TalkTypeDto"
+
+    AddTalkRequestDto:
       type: object
       required:
         - name
